@@ -1,3 +1,11 @@
+2007-10-13  Henry Proudhon  <henry.proudhon@ensmp.fr>
+
+	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
+	(composite): New field,
+	(setComposite): improved,
+	(setColor): fix compositing issues,
+	(getComposite): return from field.
+
 2007-10-11  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/renderer/category/MultiValueRenderer.java:
